cabal-version:      2.4
name:               advent-of-code2022
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Advent of Code 2022 solutions

-- A longer description of the package.
description: Advent of Code 2022 solutions

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:
author:             Michal Tichý
maintainer:         michal.tichy.y@email.cz

source-repository: https://github.com/Yvok51/advent-of-code-2022

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable advent-of-code2022
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: base>=4.14.3.0, filepath, split, containers, megaparsec, parser-combinators
    other-modules: Common, Tests, Day01, Day02, Day03, Day04, Day05, Day06, Day07, Day08, Day09, Day10, Day11, Day12, Day13
    hs-source-dirs:   app
    default-language: Haskell2010
